--- a/css/themes.css
+++ b/css/themes.css
@@ -104,10 +104,11 @@ nav ul li a {
 /* Section d'accueil */
 .welcome-picture {
     background-image: url('../asset/home-hero.jpg');
-    background-size:100%; /* Ajuste la taille de l'image pour couvrir toute la section */
+    background-size:cover; /* Ajuste la taille de l'image pour couvrir toute la section */
     background-position: center; /* Centre l'image */
     color: var(--bgcolor-theme); /* Couleur du texte */
     padding: 15rem; /* Espacement interne pour séparer le texte de l'image */
+    min-height: 100vh;
 }
 .welcome-picture p{
     font-family: 'Open-sans',sans-serif;
