--- a/css/themes.css
+++ b/css/themes.css
@@ -127,28 +127,92 @@ nav ul li a {
     padding: 2.5rem;
     margin:-1rem;
 }
-main .inner-form{
-    max-width: 80.0rem;
-    margin: 5rem auto 0;
-    padding: 2rem;
+
+/* CSS de la partie Création de compte */
+main{
+    min-height: 100vh;
 }
 
-fieldset legend{
-    font-size: 2rem;
-    padding: 1rem;
+#new-account h2{
+    display: flex;
+    justify-content: center;
+    margin: 1.6rem;
+    padding: 1.6rem;
+    font-size: 3rem;
+    text-align: center;
 }
-fieldset{
-    padding: 1rem;
-    border: solid .1rem var(--color-theme-main);
-    border-radius: .4rem;
+#new-account p{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding: auto;
+    font-size: 1.8rem;
+    text-align: center;
 }
-fieldset form *{
-    display: block;
+
+
+/* CSS du formulaire */
+.inner-form{
+    font-family: 'Open-sans', sans-serif;
+    display:flex;
+    justify-content: center;
+}
+fieldset {
+    display: flex;
+    justify-content: center;
+    width: 75rem;
+    border: 0.1rem solid #adacac;
+    border-radius: 1.5rem;
+    padding: 2.5rem;
+    margin: 2rem;
+}
+
+legend h2{
+    font-size: 2.5rem;
+    font-family: 'Open-sans',sans-serif;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    line-height: 3.5rem;
-    border: solid .1rem #ccc;
-    margin-bottom: .5rem;
 }
+
+label {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+input {
+    padding: 2rem;
+    margin-bottom: 1.5rem;
+    border: 0.1rem solid #a7a3a3;
+    border-radius: 1rem;
+    background-color: #d8d8d8;
+}
+
+.button-account {
+    background-color: dodgerblue;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+    margin: auto;   
+}
+
+.button-account button{
+    text-transform:uppercase;
+    color: var(--bgcolor-theme);
+    font-size: 1.6rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+.button-account button:hover {
+    background-color: #0056b3;
+}
+/* FIN CSS du formulaire */
 
 footer p {
     text-align: center;
