--- a/css/themes.css
+++ b/css/themes.css
@@ -196,8 +196,12 @@ input {
     margin-bottom: 1.5rem;
     border-bottom: 0.1rem solid #a7a3a3;
     background-color: #d8d8d8;
+    color: var(--text-color);
 }
 
+input::placeholder{
+    color :#2c2b2b;
+}
 .button-account {
     background-color: dodgerblue;
     padding: 2rem;
